<resources>
    <string name="app_name">YandexTodo</string>
    <string name="todo_list_title">Мои дела</string>
    <string name="todo_list_completed">Выполнено — %s</string>
    <string name="todo_list_new">Новое</string>
    <string name="task_editor_save">Сохранить</string>
    <string name="task_editor_hint">Что надо сделать…</string>
    <string name="task_editor_importance">Важность</string>
    <string name="task_deadline">Сделать до</string>
    <string name="no">Нет</string>
    <string name="importance_low">Низкий</string>
    <string name="importance_high">!! Высокий</string>
    <string name="delete">Удалить</string>
    <string name="internetError">произлоша проблема с интернетом</string>
    <string name="listInternetError">произшла ошибка при загрузке, отображены последние сохраненные задачи</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="deadline_notification">уведомление о времени конца</string>
</resources>