<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/back_primary"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:translationZ="2dp"
        >

        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:background="@null"
            android:layout_margin="21dp"
            />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_editor_save"
            android:layout_margin="21dp"
            android:textSize="14sp"
            android:layout_gravity="end"
            android:textColor="@color/color_blue"
            android:textAppearance="@style/button"
            app:layout_constraintTop_toTopOf="@+id/close" />

    </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/back_primary"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@id/close"
                tools:layout_editor_absoluteX="16dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="top|start"
                    android:hint="@string/task_editor_hint"
                    android:minHeight="104dp"
                    android:padding="16dp" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/importance_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/body"
                    android:textColor="@color/label_primary"
                    android:text="@string/task_editor_importance"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/subhead"
                    android:textColor="@color/label_tertiary"
                    android:text="@string/no"
                    />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:dividerColor="@color/support_separator"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@+id/importance_layout"
                />



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_deadline"
                    android:textAppearance="@style/body"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textAppearance="@style/subhead"
                    android:textColor="@color/color_blue"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@id/textView3" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/deadline_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:minHeight="0dp"
                    app:thumbTint="@color/color_blue"
                    app:trackTint="@color/color_blue_30"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:dividerColor="@color/support_separator"
                app:layout_constraintTop_toBottomOf="@+id/importance_layout"
                />

            <TextView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_marginStart="21dp"
                android:layout_marginTop="23dp"
                android:drawablePadding="16dp"
                android:gravity="center"
                android:textAppearance="@style/body"
                android:textColor="@color/color_red"
                android:drawableTint="@color/color_red"
                android:drawableStart="@drawable/ic_delete"
                android:layout_marginBottom="40dp"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
